tests222/tests2/test239.out
lli: <stdin>:1:1: error: expected top-level entity
line 5: function j is not defined
^
